@@ -46,8 +46,6 @@ void GenericScene::mousePressEvent(QGraphicsSceneMouseEvent* me)
         QGraphicsScene::mousePressEvent(me);
 }
 
-
-
 void GenericScene::mouseDoubleClickEvent(QGraphicsSceneMouseEvent*)
 {
     // Ignore double-clicks
