@@ -2,7 +2,8 @@
 * StateS v. 0.3 *
 *****************
 
--            - V 0.3.2 - Output delay from clock event is now facultative. Ctrl-S shortcut support. Better keyboard event handling. Cursor is back on simulaion timeline. Actions on initial state are now activated on reset.
+- 2015-05-25 - V 0.3.3 - Added rubber band selection; Added ability to force state activation in simulation mode; wheel navigation improvement.
+- 2015-05-14 - V 0.3.2 - Output delay from clock event is now facultative. Ctrl-S shortcut support. Better keyboard event handling. Cursor is back on simulaion timeline. Actions on initial state are now activated on reset.
 - 2015-05-12 - V 0.3.1 - Bugfix: Action removal from states and transitions now working.
 - 2015-04-12 - V 0.3   - (Internal) Moved to smart pointers for objects management, except for QWidgets. UI improvements.
 
@@ -29,5 +30,5 @@
 2014-11-16 - V 0.1.4 - * Warning! Save files compatibility broken! * Added support for equations with more than two operands.
 2014-11-14 - V 0.1.3 - Now allow dragging scene using middle mouse button.
 2014-11-14 - V 0.1.2 - Added icons on buttons and custom cursor shapes for machine building.
-2014-11-13 - V 0.1.1 - Rebuild simulator tab. Added a hint for how to use inputs.
+2014-11-13 - V 0.1.1 - Rebuilt simulator tab. Added a hint for how to use inputs.
 2014-11-11 - V 0.1   - Initial release.
